# WhenPenguinsFly

./: .gitignore  LICENSE.md  Makefile  README.md  config.gd  export_presets.cfg  game.gd  game.tscn  icon.svg.import  io.github.imbev.WhenPenguinsFly.desktop  io.github.imbev.WhenPenguinsFly.metainfo.xml  meson.build  page.codeberg.imbev.WhenPenguinsFly.desktop  page.codeberg.imbev.WhenPenguinsFly.metainfo.xml  project.godot  when_penguins_fly.c
assets/: LICENSE.md
assets/images/: backflip-1.png.import  cloud-mountains-background.png.import  krosh_corrupt_main.png.import  krosh_ice_main.png.import  krosh_rock_main.png.import
assets/music/: airship_remix.ogg.import
assets/sound_effects/: data_sounds_hurt.ogg.import  data_sounds_pop.ogg.import
background/: LICENSE.md  background.tscn  cloud-mountains-background.png.import
boundary/: boundary.tscn
enemy/: LICENSE.md  enemy.gd  enemy.tscn  krosh_corrupt_main.png.import  krosh_ice_main.png.import  krosh_rock_main.png.import
game/: LICENSE.md  airship_remix.ogg.import  game.gd  game.tscn
icon/: LICENSE.md  icon.svg.import
include/: assets.h
menu/: AboutMenu.gd  MainMenu.gd  SettingsMenu.gd  menu.tscn
player/: LICENSE.md  backflip-1.png.import  player.gd  player.tscn
player/fly/: swim-0.png.import  (+8 more)
scenes/: enemy.tscn  game.tscn  menu.tscn  player.tscn
screenshots/: screenshot-gameover.png.import  screenshot-gameplay.png.import  screenshot-title.png.import
scripts/: AboutMenu.gd  MainMenu.gd  background.gd  boundary.gd  enemy.gd  game.gd  player.gd
src/: assets.c  button.c  button.h  main.c
(+11 files in other folders)
